feat: add link preview image

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Visualize your Github CSV Billing and get a simple overview of your costs."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/teaser-github.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GitHub CSV Billing Dashboard</title>
     <script
