--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
         };
       panelbear("config", { site: "CJFw3RZ73u4" });
     </script>
+    <script async src="https://rum.cronitor.io/script.js"></script>
+    <script>
+      window.cronitor = window.cronitor || function() { (window.cronitor.q = window.cronitor.q || []).push(arguments); };
+      cronitor('config', { clientKey: 'cdc4757f87bf8d33ba753e456b897d9f' });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
